last book widget

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -979,6 +979,55 @@
 		height: 80px !important;
 	}
 
+	.last-book{
+		padding-left: 10px;
+		padding-bottom: 15px;
+		padding-top: 10px;
+	}
+
+	.last-book-block-first{
+		height: 260px;
+		width: 44%;
+		float: left;
+		
+		img.img-last-big-book{
+			float: left;
+			margin-right: 10px;
+			height: 280px;
+			width: 190px;
+		}
+
+		.book-author, .book-subject, .book-clas{
+			font-size: 16px;
+		}
+
+		.desc p{
+			font-size: 11px;
+		}	
+	}
+
+	.last-book-block{
+		height: 125px;
+		width: 28%;
+		float: left;
+		margin-bottom: 20px;
+
+		img.img-last-small-book{
+			float: left;
+			margin-right: 10px;
+			height: 135px;
+			width: 100px;
+		}
+
+		.book-author, .book-subject, .book-clas{
+			font-size: 12px;
+		}
+
+		.desc p{
+			font-size: 10px;
+		}	
+	}
+
 	
 
 
