--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -596,6 +596,10 @@
 		.book-author, .book-subject, .book-clas{
 			font-size: 18px;
 		}
+
+		a{
+			font-size: 12px;
+		}
 	}
 
 	.big-book-block{
@@ -642,6 +646,10 @@
 
 		.book-author, .book-subject, .book-clas{
 			font-size: 14px;
+		}
+
+		a{
+			font-size: 10px;
 		}
 	}
 
