style social group

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -451,6 +451,7 @@
 	.sidebar-block{
 		margin-bottom: 15px;
 		border-bottom: 2px dotted #ccc;
+
 		&:last-child{
 			border-bottom: none;
 		}
@@ -459,6 +460,7 @@
 			color: @blue;
 			padding-left: 25px;
 		}
+
 	}
 
 	.clear{
@@ -1034,6 +1036,16 @@
 		.desc p{
 			font-size: 10px;
 		}	
+	}
+
+	#vk_groups{
+		margin-left: 15px;
+		margin-bottom: 15px;
+	}
+
+	.facebook-group{
+		margin-left: 15px;
+		margin-bottom: 15px;
 	}
 
 	
