--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -156,7 +156,7 @@
 
 	.header-menu ul{
 		
-		margin-left: -10px;
+		// margin-left: -10px;
 
 		li{
 			margin-right: 10px;
@@ -164,8 +164,8 @@
 			display: block;
 			height: 53px;
 			// width: 150px;
-			padding-left: 20px;
-			padding-right: 20px;
+			padding-left: 30px;
+			padding-right: 30px;
 			float: left;
 			text-align: center;
 			// outline: 2px dashed blue;
@@ -216,7 +216,7 @@
 				color: @blue;
 				text-decoration: none;
 				border-bottom: 1px solid @yellow;
-				font-size: 16px;
+				font-size: 18px;
 
 				&:hover{
 					border-bottom: none;
@@ -231,7 +231,7 @@
 		top: 38px;
 		left: -280px;
 		display: none;
-		height: 300px;
+		// height: 300px;
 		width: 750px;
 		// outline: 2px solid red;
 		background-color: #f5f5f5;
@@ -244,7 +244,7 @@
 		top: 38px;
 		left: -380px;
 		display: none;
-		height: 300px;
+		// height: 300px;
 		width: 750px;
 		// outline: 2px solid red;
 		background-color: #f5f5f5;
