style button link

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -590,6 +590,7 @@
 		width: 50%;
 		float: left;
 		padding: 5px;
+		position: relative;
 
 		.desc{
 			margin-top: 10px;
@@ -601,6 +602,18 @@
 
 		a{
 			font-size: 12px;
+		}
+
+		.gdz-link{
+			position: absolute;
+			bottom: 65px;
+			right: 120px;
+		}
+
+		.textbook-link{
+			position: absolute;
+			bottom: 35px;
+			right: 82px;
 		}
 	}
 
