fix style button link

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -607,13 +607,13 @@
 		.gdz-link{
 			position: absolute;
 			bottom: 65px;
-			right: 120px;
+			right: 112px;
 		}
 
 		.textbook-link{
 			position: absolute;
-			bottom: 35px;
-			right: 82px;
+			bottom: 30px;
+			right: 74px;
 		}
 	}
 
@@ -649,6 +649,7 @@
 		width: 33%;
 		float: left;
 		padding: 5px;
+		position: relative;
 
 		img{
 			height: 150px;
@@ -666,6 +667,18 @@
 		a{
 			font-size: 10px;
 		}
+
+		.gdz-link{
+			position: absolute;
+			bottom: 52px;
+			right: 62px;
+		}
+
+		.textbook-link{
+			position: absolute;
+			bottom: 30px;
+			right: 30px;
+		}
 	}
 
 	.list-book-block{
@@ -673,6 +686,19 @@
 		width: 100%;
 		float: left;
 		padding: 5px;
+		position: relative;
+
+		.gdz-link{
+			position: absolute;
+			bottom: 65px;
+			right: 512px;
+		}
+
+		.textbook-link{
+			position: absolute;
+			bottom: 30px;
+			right: 474px;
+		}
 	}
 
 	
