--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -341,17 +341,28 @@
 			height: 24px;
 			background-color: @blue;
 			border: none;
+			margin-left: 0px;
 
 
 		}
 		td > input.gsc-search-button-v2{
 			background-image: none;
-			padding: 5px 11px;
+			padding: 5px 12px;
 			margin-top: 1px;
+			border-radius: 0px;
 		}
 
 		table.gsc-search-box td.gsc-input{
+
 			padding-right: 0px;
+			margin-left: 0px;
+			margin-bottom: 10px;
+
+			.gsc-input-box{
+				margin-bottom: 2px;
+			}
+			
+
 		}
 	}
 
