add know-all in menu

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -291,6 +291,26 @@
 		text-align: center;
 	}
 
+	.know-all-block{
+		width: 280px;
+		height: 70px;
+		display: none;
+		position: absolute;
+		background-color: #f5f5f5;
+		box-shadow: 0px 6px 6px #C9C9C9;
+		top: 38px;
+		left: -80px;
+		padding: 10px;
+
+		a.know-all-subcategory{
+			display: inline;
+			margin-right: 70px;
+			line-height: 25px;
+			color: darken(@blue, 15%);
+			font-size: 15px;
+		}
+	}
+
 
 	.footer-menu{
 		float: right;
@@ -347,7 +367,7 @@
 		}
 		td > input.gsc-search-button-v2{
 			background-image: none;
-			padding: 5px 12px;
+			padding: 5px 13px;
 			margin-top: 1px;
 			border-radius: 0px;
 		}
