--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -366,7 +366,7 @@
 
 	}
 
-	.know-all-block{
+	.knowall-block{
 		width: 280px;
 		height: 70px;
 		display: none;
@@ -377,7 +377,7 @@
 		left: -80px;
 		padding: 10px;
 
-		a.know-all-subcategory{
+		a.knowall-subcategory{
 			border-bottom: 0px !important;
 			text-decoration: none !important;
 			display: inline;
