--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -169,8 +169,8 @@
 			display: block;
 			height: 53px;
 			// width: 150px;
-			padding-left: 30px;
-			padding-right: 30px;
+			padding-left: 25px;
+			padding-right: 25px;
 			float: left;
 			text-align: center;
 			// outline: 2px dashed blue;
@@ -221,7 +221,7 @@
 				color: @blue;
 				text-decoration: none;
 				border-bottom: 1px solid @yellow;
-				font-size: 18px;
+				font-size: 17px;
 
 				&:hover{
 					border-bottom: none;
@@ -429,7 +429,7 @@
 	.search{
 		position: absolute;
 		right: 15px;
-		top: 25px;
+		top: 65px;
 		width: 300px;/*410*/
 		// height: 35px;
 		// border: 1px solid #ccc;
@@ -587,6 +587,7 @@
 	}
 
 	.sidebar{
+		padding-top: 15px;
 		float: left;
 		width: 328px;
 		// min-height: 600px;
