--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -381,7 +381,7 @@
 			border-bottom: 0px !important;
 			text-decoration: none !important;
 			display: inline;
-			margin-right: 70px;
+			margin-right: 50px;
 			line-height: 25px;
 			color: darken(@blue, 15%);
 			font-weight: normal !important;
@@ -429,7 +429,7 @@
 	.search{
 		position: absolute;
 		right: 15px;
-		top: 65px;
+		top: 25px;
 		width: 300px;/*410*/
 		// height: 35px;
 		// border: 1px solid #ccc;
@@ -587,7 +587,7 @@
 	}
 
 	.sidebar{
-		padding-top: 15px;
+		// padding-top: 15px;
 		float: left;
 		width: 328px;
 		// min-height: 600px;
