--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1267,6 +1267,8 @@
 
 		img{
 			margin-bottom: 15px;
+			width: 380px;
+			height: 280px;
 		}
 
 		.knowall-link{
@@ -1297,6 +1299,11 @@
 
 			a{
 				color: @yellow;
+			}
+
+			img{
+				width: 140px;
+				height: 100px;
 			}
 
 			span{
