одинаковой высоты блоки

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -581,8 +581,8 @@
 		// padding-top: 20px;
 		float: left;
 		width: 870px;
-		min-height: 600px;
-		border-right: 2px dotted #ccc;
+		// min-height: 600px;
+		// border-right: 2px dotted #ccc;
 		// outline: 1px dashed yellow;
 	}
 
@@ -593,7 +593,8 @@
 		// min-height: 600px;
 		// outline: 1px dashed gray;
 		// padding-top: 15px;
-		// border-left: 2px dotted #ccc;
+		border-left: 2px dotted #ccc;
+		// border-right: 2px dotted #ccc;
 	}
 
 	.sidebar-block{
