--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1267,7 +1267,7 @@
 		box-shadow: 0px 0px 3px #ccc;
 
 		img{
-			margin-bottom: 15px;
+			margin-bottom: 25px;
 			width: 380px;
 			height: 280px;
 		}
@@ -1288,15 +1288,16 @@
 			
 			top: 270px;
 			left: 130px;
+			padding-top: 2px;
 
 			width: 150px;
-			height: 24px;
+			height: 22px;
 			background-color: #fff;
 			border: 1px solid #ccc;
 			border-radius: 10px;
 			
 			text-align: center;
-			font-size: 14px;
+			font-size: 12px;
 
 			a{
 				color: @yellow;
@@ -1314,6 +1315,66 @@
 		}
 	}
 
+	.middle-article-block{
+		position: relative;
+		float: left;
+		// margin-right: 25px;
+		// margin-left: 15px;
+		margin-bottom: 15px;
+		// width: 250px;
+		// padding-bottom: 14px;
+
+		// box-shadow: 0px 0px 3px #ccc;
+
+		img{
+			margin-bottom: 15px;
+			width: 260px;
+			height: 170px;
+		}
+
+		.knowall-link{
+			text-align: center;
+			// margin-bottom: 10px; 
+			
+			a{
+				margin-left: 10px;
+				font-size: 17px;
+				text-decoration: underline;
+			}
+		}
+
+		.knowall-category-link{
+			position: absolute;
+			
+			top: 155px;
+			left: 74px;
+
+			width: 140px;
+			height: 24px;
+			background-color: #fff;
+			border: 1px solid #ccc;
+			border-radius: 10px;
+			
+			text-align: center;
+
+			a{
+				font-size: 12px;
+				color: @yellow;
+			}
+
+			img{
+				width: 140px;
+				height: 100px;
+			}
+
+			span{
+				color: #bbb;
+				font-size: 10px;
+			}
+		}
+	}
+
+
 	.knowall-small-block{
 
 		float: left;
@@ -1323,7 +1384,7 @@
 			clear: both;
 			width: 430px;
 			height: 100px;
-			margin-bottom: 16px;
+			margin-bottom: 21px;
 
 			box-shadow: 0px 0px 3px #ccc;
 
@@ -1336,7 +1397,7 @@
 
 			.knowall-link{
 				text-align: left;
-				padding-top: 25px;
+				padding-top: 30px;
 				
 				a{
 					// margin-top: 30px;
@@ -1347,7 +1408,8 @@
 
 			.knowall-category-link{
 				text-align: left;
-				padding-top: 20px;
+				padding-top: 25px;
+				font-size: 12px;
 
 				a{
 					color: @yellow;
@@ -1355,7 +1417,6 @@
 
 				span{
 					color: #bbb;
-					font-size: 12px;
 				}
 			}
 			
