article category description

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -163,69 +163,69 @@
 		
 		// margin-left: -10px;
 
-		li{
-			margin-right: 10px;
-			// height: 80px;
-			display: block;
-			height: 53px;
-			// width: 150px;
-			padding-left: 25px;
-			padding-right: 25px;
-			float: left;
-			text-align: center;
-			// outline: 2px dashed blue;
-			position: relative;
-			
-			&.active{
-				// padding-top: 6px;
-				background-color: #fff;
-				// border-right: 2px dotted #ccc;
-				// border-top:2px dotted #ccc; 
-				// border-left: 2px dotted #ccc;
+	}
 
-				a{
-					
-					font-weight: bold;
-					border-bottom: none;
+	.header-menu > ul > li{
 
+		margin-right: 10px;
+		// height: 80px;
+		display: block;
+		height: 53px;
+		// width: 150px;
+		padding-left: 25px;
+		padding-right: 25px;
+		float: left;
+		text-align: center;
+		// outline: 2px dashed blue;
+		position: relative;
 
-					&:hover{
-						text-decoration: underline;
-					}
-				}
+		&:after{
+	    	content: '';
+			border-right: 2px solid;
+			border-bottom: 2px solid;
+			width: 1em;
+			height: 1em;
+			transform: scale(0.5) rotate(45deg);
+			transform-origin: 60% 60% 0px;
+			transition: transform 0.2s ease-out 0s, margin-top 0.2s ease-out 0s;
+			display: inline-block;
+			margin-left: -1px;
+		}
 
+		&:hover{
+			border-right: none;
+			border-top:none; 
+			border-left: none;
+			box-shadow: 0px 6px 6px #C9C9C9;
+		}
 
-			}
-
-			&:hover{
-				border-right: none;
-				border-top:none; 
-				border-left: none;
-				box-shadow: 0px 6px 6px #C9C9C9;
-			}
-
-			&::after{
-		    	content: '';
-				border-right: 2px solid;
-				border-bottom: 2px solid;
-				width: 1em;
-				height: 1em;
-				transform: scale(0.5) rotate(45deg);
-				transform-origin: 60% 60% 0px;
-				transition: transform 0.2s ease-out 0s, margin-top 0.2s ease-out 0s;
-				display: inline-block;
-				margin-left: -1px;
-			}
+		&.active{
+			// padding-top: 6px;
+			background-color: #fff;
+			// border-right: 2px dotted #ccc;
+			// border-top:2px dotted #ccc; 
+			// border-left: 2px dotted #ccc;
 
 			a{
-				color: @blue;
-				text-decoration: none;
-				border-bottom: 1px solid @yellow;
-				font-size: 17px;
+				
+				font-weight: bold;
+				border-bottom: none;
+
 
 				&:hover{
-					border-bottom: none;
+					text-decoration: underline;
 				}
+			}
+		}
+
+		a{
+			color: @blue;
+			text-decoration: none;
+			border-bottom: 1px solid @yellow;
+			font-size: 17px;
+
+			&:hover{
+				border-bottom: none;
 			}
 		}
 	}
@@ -367,14 +367,27 @@
 	}
 
 	.knowall-block{
-		width: 280px;
-		height: 70px;
+
+
+		ul{
+			li{
+		    	display: inline-block;
+		    	width: 120px;
+		    	height: 20px;
+				
+				&::after{
+				}
+			}
+		}
+
+		width: 580px;
+		height: 60px;
 		display: none;
 		position: absolute;
 		background-color: #f5f5f5;
 		box-shadow: 0px 6px 6px #C9C9C9;
 		top: 38px;
-		left: -80px;
+		left: -380px;
 		padding: 10px;
 
 		a.knowall-subcategory{
@@ -664,7 +677,7 @@
 	}
 
 	p.description{
-		padding: 12px;
+		padding: 15px;
 		line-height: 18px;
 		font-family: Arial;
 		color: #333;
