--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -205,11 +205,13 @@
 			// border-right: 2px dotted #ccc;
 			// border-top:2px dotted #ccc; 
 			// border-left: 2px dotted #ccc;
+			
 
 			a{
 				
 				font-weight: bold;
 				border-bottom: none;
+				// color: @yellow;
 
 
 				&:hover{
@@ -674,6 +676,12 @@
 		color: @blue;
 		text-align: center;
 		font-size: 28px;
+		margin-bottom: 25px;
+	}
+
+	h3{
+		color: @blue;
+		font-size: 20px;
 	}
 
 	p.description{
@@ -721,6 +729,18 @@
 		padding-left: 15px;
 		padding-top: 15px;
 		padding-bottom: 5px;
+
+		a{
+			// text-decoration: underline;
+			// border-bottom: 1px solid @yellow;
+
+			&:hover{
+				text-decoration: none;
+				border-bottom: 1px solid @blue;
+				color: darken(@yellow, 5%);
+				// border-bottom: none;
+			}
+		}
 	}
 
 	.subject-list{
@@ -1266,6 +1286,14 @@
 	.sorter{
 		margin-right: 15px !important;
 		margin-bottom: 10px !important;
+
+		a{
+			// border-bottom: 1px solid @yellow;
+			&:hover{
+				text-decoration: none;
+				border-bottom: 1px solid @blue;
+			}
+		}
 	}
 	
 	.knowall-large-block{
@@ -1287,24 +1315,32 @@
 
 		.knowall-link{
 			text-align: center;
-			// margin-bottom: 10px; 
+			margin-bottom: 15px; 
 			
 			a{
 				margin-left: 10px;
 				font-size: 17px;
-				text-decoration: underline;
+				border-bottom: 1px solid @yellow;
+				//text-decoration: underline;
+				
+				&:hover{
+					// color: darken(@blue, 20%);
+					color: darken(@yellow, 5%);
+					text-decoration: none;
+					border-bottom: 1px solid @blue;
+				}
 			}
 		}
 
 		.knowall-category-link{
 			position: absolute;
 			
-			top: 270px;
+			top: 267px;
 			left: 130px;
-			padding-top: 2px;
+			padding-top: 3px;
 
 			width: 150px;
-			height: 22px;
+			height: 26px;
 			background-color: #fff;
 			border: 1px solid #ccc;
 			border-radius: 10px;
@@ -1314,6 +1350,15 @@
 
 			a{
 				color: @yellow;
+				text-decoration: none;
+				// border-bottom: 1px solid @blue;
+
+				&:hover{
+					// color: darken(@blue, 20%);
+					color: darken(@blue, 5%);
+					text-decoration: none;
+					border-bottom: 1px solid @yellow;
+				}
 			}
 
 			img{
@@ -1352,7 +1397,16 @@
 			a{
 				margin-left: 10px;
 				font-size: 17px;
-				text-decoration: underline;
+				// text-decoration: underline;
+				// border-bottom: 1px solid @yellow;
+
+				&:hover{
+					// color: darken(@blue, 20%);
+					color: darken(@yellow, 5%);
+					text-decoration: none;
+					border-bottom: 1px solid @blue;
+				}
+
 			}
 		}
 
@@ -1373,6 +1427,13 @@
 			a{
 				font-size: 12px;
 				color: @yellow;
+				// border-bottom: 1px solid @blue;
+
+				&:hover{
+					text-decoration: none;
+					color: darken(@blue, 5%);
+					border-bottom: 1px solid @yellow;
+				}
 			}
 
 			img{
@@ -1389,15 +1450,16 @@
 
 
 	.knowall-small-block{
-
+		
 		float: left;
 
 		.knowall-small-one-block{
+			position: relative;
 			display: block;
 			clear: both;
 			width: 430px;
-			height: 100px;
-			margin-bottom: 21px;
+			height: 106px;
+			margin-bottom: 20px;
 
 			box-shadow: 0px 0px 3px #ccc;
 
@@ -1410,22 +1472,46 @@
 
 			.knowall-link{
 				text-align: left;
-				padding-top: 30px;
+				padding-top: 40px;
 				
 				a{
 					// margin-top: 30px;
 					font-size: 15px;
-					text-decoration: underline;
+					//text-decoration: underline;
+					border-bottom: 1px solid @yellow;
+
+					&:hover{
+						color: darken(@yellow, 5%);
+						text-decoration: none;
+						border-bottom: 1px solid @blue;
+					}
 				}
 			}
 
 			.knowall-category-link{
-				text-align: left;
-				padding-top: 25px;
-				font-size: 12px;
+
+				position: absolute;
+				
+				top: 97px;
+				left: 40px;
+
+				width: 80px;
+				height: 16px;
+				background-color: #fff;
+				border: 1px solid #ccc;
+				border-radius: 8px;
+				font-size: 10px;
+				text-align: center;
 
 				a{
 					color: @yellow;
+					// border-bottom: 1px solid @blue;
+
+					&:hover{
+						color: darken(@blue, 5%);
+						text-decoration: none;
+						border-bottom: 1px solid @yellow;
+					}
 				}
 
 				span{
@@ -1440,6 +1526,10 @@
 	.knowall-article{
 		margin-left: 15px;
 		margin-right: 15px;
+	}
+
+	.last-knowall{
+		margin-top: 20px;
 	}
 	
 
