library, main content, category content

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -690,6 +690,17 @@
 		font-family: Arial;
 		color: #333;
 
+		a{
+			border-bottom: 1px solid @yellow;
+			text-decoration: none;
+
+			&:hover{
+				text-decoration: none;
+				color: @yellow;
+				border-bottom: 1px solid @blue;
+			}
+		}
+
 	}
 
 	.separator{
