--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -258,7 +258,20 @@
 		box-shadow: 0px 6px 6px #999;
 	}
 
-	.gdz-table table, .textbook table{
+	.writing-table{
+		// padding: 10px;
+		position: absolute;
+		top: 38px;
+		left: -380px;
+		display: none;
+		// height: 300px;
+		width: 700px;
+		// outline: 2px solid red;
+		background-color: #f5f5f5;
+		box-shadow: 0px 6px 6px #999;
+	}
+
+	.gdz-table table, .textbook table, .writing table{
 		// border: 1px solid #ccc;
 		width: 100%;
 		height: 100%;
