knowall category widget, img link, loop link in category

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -172,8 +172,8 @@
 		display: block;
 		height: 53px;
 		// width: 150px;
-		padding-left: 25px;
-		padding-right: 25px;
+		padding-left: 24px;
+		padding-right: 24px;
 		float: left;
 		text-align: center;
 		// outline: 2px dashed blue;
@@ -495,6 +495,7 @@
 	}
 
 	.search{
+		z-index: 2;
 		position: absolute;
 		right: 15px;
 		top: 65px;
@@ -1336,7 +1337,7 @@
 	.middle-article-block{
 		padding-bottom: 25px;
 
-		a{
+		.knowall-link a{
 			margin-left: 5px;
 			font-size: 16px;
 			color: @blue;
@@ -1506,8 +1507,8 @@
 			}
 
 			span{
-				color: #bbb;
-				font-size: 10px;
+				color: @yellow;
+				font-size: 12px;
 			}
 		}
 	}
