--- a/css/inside.css
+++ b/css/inside.css
@@ -44,6 +44,7 @@ body{
 	margin-left: 400px;
 	float: left;
 	margin-right: 370px;
+	text-align: center;
 }
 
 .clear{
@@ -57,6 +58,10 @@ body{
 .mini-book img{
 	width: 60px;
 	height: 90px;
+}
+
+h1{
+	text-align: center;
 }
 
 
