--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1,8 +1,3 @@
-
-@media all and (max-width: 767px) { .wrap{ min-width: 1170px;} }
-@media (min-width: 768px) { .wrap{ min-width: 1170px;} }
-@media (min-width: 992px) { .wrap{ min-width: 1170px;} }
-
 /*------colors-------*/
 @color-5: #FF3333;
 @color-6: #FF9900;
@@ -37,7 +32,7 @@
 	color: @color-11 !important;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1130px) {
 
 	body{
 		background-color: #fafafa;
@@ -45,13 +40,13 @@
 	}
 
 	.red{
-		width: 1230px;
+		width: 1180px;
 		border-bottom: 2px dotted #FA8072;
 		margin-left: -28px;
 	}
 
 	.black{
-		width: 1230px;
+		width: 1180px;
 		border-bottom: 2px dotted #999;
 		margin-left: -30px;
 		// margin-left: 4px;
@@ -90,20 +85,25 @@
 
 	.wrap{
 		// outline: 1px dashed red;
-		width: 1200px;
+		width: 1140px;
 		margin: 0 auto;
 		box-shadow: 0px 0px 7px #999;
 		background-color: #fff;
 		overflow: hidden;
 	}
 
+
 	.header{
+		background-color: #fff;
 		height: 75px;
-		width: 100%;
+		width: 1140px;
+		// overflow: hidden;
 		// outline: 1px dashed green;
 		position: relative;
 		// border-bottom: 2px dotted #ccc;
 	}
+
+
 
 	.logo{
 		padding-top: 5px;
@@ -156,7 +156,7 @@
 
 	.header-menu{
 		float: left;
-		width: 850px;
+		width: 600px;
 		height: 100%;
 		padding-top: 22px;
 		
@@ -173,7 +173,7 @@
 		margin-right: 10px;
 		// height: 80px;
 		display: block;
-		height: 53px;
+		height: 25px;
 		// width: 150px;
 		padding-left: 24px;
 		padding-right: 24px;
@@ -196,6 +196,7 @@
 		}
 
 		&:hover{
+			height: 53px;
 			border-right: none;
 			border-top:none; 
 			border-left: none;
@@ -238,7 +239,7 @@
 	.gdz-table{
 		// padding: 10px;
 		position: absolute;
-		top: 38px;
+		top: 35px;
 		left: -280px;
 		display: none;
 		// height: 300px;
@@ -251,7 +252,7 @@
 	.textbook-table{
 		// padding: 10px;
 		position: absolute;
-		top: 38px;
+		top: 35px;
 		left: -380px;
 		display: none;
 		// height: 300px;
@@ -264,7 +265,7 @@
 	.writing-table{
 		// padding: 10px;
 		position: absolute;
-		top: 38px;
+		top: 35px;
 		left: -380px;
 		display: none;
 		// height: 300px;
@@ -404,7 +405,7 @@
 		position: absolute;
 		background-color: #f5f5f5;
 		box-shadow: 0px 6px 6px #C9C9C9;
-		top: 38px;
+		top: 35px;
 		left: -380px;
 		padding: 10px;
 
@@ -467,7 +468,7 @@
 
 	.footer-menu{
 		float: right;
-		width: 900px;
+		width: 780px;
 		height: 100%;
 		padding-top: 25px;
 		padding-bottom: 5px;
@@ -501,7 +502,7 @@
 		z-index: 2;
 		position: absolute;
 		right: 15px;
-		top: 65px;
+		top: 25px;
 		width: 300px;/*410*/
 		// height: 35px;
 		// border: 1px solid #ccc;
@@ -648,20 +649,64 @@
 	// 	// padding-top: 2px;
 	// 	cursor: pointer;
 	// }
+	
+
+
+	.fixed-menu{
+		position: fixed;
+		height: 45px;
+		box-shadow: 0px 0px 7px #999;
+		z-index: 10;
+
+		.black, .red{
+			display: none;
+		}
+		
+
+		.logo img{
+			display: none;
+		}
+
+		.logo-description{
+			display: none;
+		}
+
+		.logo-title{
+			padding-left: 0px;
+			padding-top: 0px;
+			font-size: 32px;
+			font-weight: bold;
+			color: darken(@blue, 15%);
+			margin-top: -3px;
+		}
+
+		.header-menu{
+			padding-top: 10px;
+			background-color: #fff;
+		}
+
+		.search{
+			background-color: #fff;
+			right: 15px;
+			top: 8px;
+		}
+	}
 
 	.content{
 		// padding-top: 20px;
 		float: left;
-		width: 870px;
+		width: 810px;
+		padding: 15px;
 		// min-height: 600px;
 		// border-right: 2px dotted #ccc;
 		// outline: 1px dashed yellow;
 	}
 
 	.sidebar{
-		padding-top: 15px;
+		padding: 15px;
+		padding-top: 20px;
 		float: left;
-		width: 328px;
+		width: 330px;
 		// min-height: 600px;
 		// outline: 1px dashed gray;
 		// padding-top: 15px;
@@ -671,7 +716,7 @@
 
 	.sidebar-block{
 		margin-bottom: 15px;
-		border-bottom: 2px dotted #ccc;
+		// border-bottom: 2px dotted #ccc;
 
 		&:last-child{
 			border-bottom: none;
@@ -679,7 +724,8 @@
 
 		h3{
 			color: @blue;
-			padding-left: 25px;
+			text-align: center;
+			font-weight: bold;
 		}
 
 	}
@@ -691,6 +737,7 @@
 	.footer{
 		height: 75px;
 		width: 100%;
+
 		// outline: 1px dashed green;
 		// border-top: 2px dotted #ccc;
 	}
@@ -742,7 +789,7 @@
 	}
 
     .description{
-		padding: 15px;
+		// padding: 15px;
 		
 		p{
 			line-height: 18px;
@@ -811,8 +858,9 @@
 	}
 
 	.direct{
-		margin-left: 15px;
-		margin-top: 15px;
+
+		// margin-left: 15px;
+		// margin-top: 15px;
 	}
 
 	.breadcrumbs{
@@ -879,7 +927,7 @@
 		.gdz-link{
 			position: absolute;
 			bottom: 65px;
-			right: 112px;
+			right: 72px;
 		}
 
 		.textbook-link{
@@ -926,6 +974,7 @@
 		img{
 			height: 150px;
 			width: 110px;
+			margin-right: 5px;
 		}
 
 		.desc{
@@ -943,7 +992,7 @@
 		.gdz-link{
 			position: absolute;
 			bottom: 52px;
-			right: 62px;
+			right: 32px;
 		}
 
 		.textbook-link{
@@ -963,7 +1012,7 @@
 		.gdz-link{
 			position: absolute;
 			bottom: 65px;
-			right: 512px;
+			right: 447px;
 		}
 
 		.textbook-link{
@@ -1046,10 +1095,14 @@
 
 	}
 
+	.task{
+
+	}
+
 
 
 	.task-block{
-		padding: 10px;
+		// padding: 10px;
 	}
 
 	.task-number{
@@ -1094,18 +1147,21 @@
 
 	.zoom-range{
 		float: left;
-		width: 760px !important;
+		width: 670px !important;
 
 	}
 
 	#inverted-contain{
 		display: none;
+		position: relative;
+		min-height: 180px;
 	}
 
 	.panzoom-parent{
 		padding-top: 20px;
 		padding-left: 10px;
 		padding-bottom: 20px; 
+		text-align: center;
 	}
 
 	
@@ -1123,26 +1179,37 @@
 
 		ul{
 			margin-top:20px;
-			padding-left: 10px;
+			// padding-left: 10px;
 		}
 		
 		
 
 		ul.sidebar-menu-category{
+			padding-left: 0px;
 			li{
 				list-style-type: none; /* Убираем маркеры */
-				float: left;
+				display: inline;
 				margin-right: 15px;
-				padding: 3px;
+				// padding: 3px;
 				a{
 					font-size: 18px;
 					margin-right: 5px;
+					text-decoration: none;
+					border-bottom: 1px solid @yellow;
+					&:hover{
+						color: @yellow;
+						border-bottom: 1px solid @blue;
+					}
 				}
+				
+
 				&.active{
-					outline: 1px solid @blue;
+					// outline: 1px solid @blue;
 					// border-radius: 3px; 
 					span{
 						color: @yellow;
+						font-size: 20px;
+						font-weight: bold;
 
 					}
 				}
@@ -1151,25 +1218,42 @@
 		}
 
 		ul.sidebar-menu-clas{
-			& li{
+			padding-left: 0px;
+			li{
 				list-style-type: none; /* Убираем маркеры */
-				float: left;
-				margin-right: 15px;
-				padding: 5px;
+				display: inline;
+				margin-right: 10px;
+				// padding: 5px;
 				margin-bottom: 2px;
 				a{
-					font-size: 20px;
-					padding-left: 7px;
-					padding-right: 7px;
+					font-size: 18px;
+					// padding-left: 7px;
+					// padding-right: 7px;
+					text-decoration: none;
+					border-bottom: 1px solid @yellow;
+					&:hover{
+						color: @yellow;
+						border-bottom: 1px solid @blue;
+					}
 				}
 				&.active{
-					outline: 1px solid @blue;
+					// outline: 1px solid @blue;
 					// border-radius: 3px; 
 					a{
+						border-bottom: none;
 						color: @yellow;
+						font-size: 20px;
+						font-weight: bold;
 						// font-size: 20px;
 						// padding-left: 7px;
 						// padding-right: 7px;
+					}
+
+					span{
+						color: @yellow;
+						font-size: 20px;
+						font-weight: bold;
+
 					}
 					
 				}
@@ -1177,21 +1261,38 @@
 		}
 
 		ul.sidebar-menu-subject{
-			& li{
+			padding-left: 0px;
+			li{
 				list-style-type: none; /* Убираем маркеры */
 				float: left;
-				margin-right: 15px;
-				padding: 3px;
+				margin-right: 10px;
+				// padding: 3px;
 				margin-bottom: 2px;
 				a{
-					font-size: 16px;
+					font-size: 18px;
 					margin-right: 7px;
+					text-decoration: none;
+					border-bottom: 1px solid @yellow;
+					&:hover{
+						color: @yellow;
+						border-bottom: 1px solid @blue;
+					}
 				}
 				&.active{
-					outline: 1px solid @blue;
+					// outline: 1px solid @blue;
 					// border-radius: 3px; 
 					a{
 						color: @yellow;
+						font-size: 18px;
+						font-weight: bold;
+
+
+					}
+
+					span{
+						color: @yellow;
+						font-size: 18px;
+						font-weight: bold;
 
 					}
 					
@@ -1301,7 +1402,7 @@
 	}
 
 	.last-book{
-		padding-left: 10px;
+		// padding-left: 10px;
 		padding-bottom: 15px;
 		padding-top: 10px;
 	}
@@ -1350,12 +1451,12 @@
 	}
 
 	#vk_groups{
-		margin-left: 15px;
+		// margin-left: 15px;
 		margin-bottom: 15px;
 	}
 
 	.facebook-group{
-		margin-left: 15px;
+		// margin-left: 15px;
 		margin-bottom: 15px;
 	}
 
@@ -1389,17 +1490,16 @@
 	.knowall-large-block{
 		position: relative;
 		float: left;
-		margin-right: 25px;
-		margin-left: 15px;
+		margin-right: 15px;
 		margin-bottom: 15px;
-		width: 380px;
+		width: 350px;
 		padding-bottom: 14px;
 
 		box-shadow: 0px 0px 3px #ccc;
 
 		img{
 			margin-bottom: 25px;
-			width: 380px;
+			width: 350px;
 			height: 280px;
 		}
 
@@ -1426,7 +1526,7 @@
 			position: absolute;
 			
 			top: 267px;
-			left: 130px;
+			left: 100px;
 			padding-top: 3px;
 
 			width: 150px;
@@ -1476,7 +1576,7 @@
 
 		img{
 			margin-bottom: 15px;
-			width: 260px;
+			width: 235px;
 			height: 170px;
 		}
 
@@ -1547,7 +1647,7 @@
 			position: relative;
 			display: block;
 			clear: both;
-			width: 430px;
+			width: 415px;
 			height: 106px;
 			margin-bottom: 20px;
 
@@ -1614,8 +1714,8 @@
 	}
 
 	.knowall-article{
-		margin-left: 15px;
-		margin-right: 15px;
+		// margin-left: 15px;
+		// margin-right: 15px;
 	}
 
 	.last-knowall{
@@ -1633,6 +1733,92 @@
 
 	.error-block{
 		margin-top: 50px;
+	}
+
+	.h-direct{
+		text-align: center;
+		margin-top: 15px;
+		padding-bottom: 10px;
+	}
+
+
+	.loading {
+		position: absolute;
+		display: none;
+		width: 128px;
+		height: 128px;
+		top: 10%;
+		left: 45%;
+		z-index: 1001;
+
+		background-image: url('/images/loading.gif');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-color: white;
+	}
+
+	.darking{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: #555;
+		opacity: 0.23;
+		z-index: 1000;
+		display: none;
+	}
+
+	.b-left{
+		width: 25px;
+		height: 25px;
+		
+		position: absolute;
+		top: 50%;
+		left: 0px;
+		opacity: 0.3;
+		// border: 1px solid @blue;
+		// border-radius: 10px;
+		color: @blue;
+
+
+
+
+		&:hover{
+			opacity: 1;
+			cursor: pointer;
+		}
+
+	}
+
+	.b-right{
+		width: 25px;
+		height: 25px;
+		
+		position: absolute;
+		top: 50%;
+		right: 0px;
+		opacity: 0.3;
+
+		// border: 1px solid @blue;
+		// border-radius: 10px;
+
+		&:hover{
+			opacity: 1;
+			cursor: pointer;
+		}
+
+		color: @blue;
+	}
+
+	.nav{
+		outline: none;
+
+		li{
+			outline: none;
+
+			a{
+				outline: none;
+			}
+		}
 	}
 
 
