--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -43,13 +43,13 @@
 		width: 1180px;
 		border-bottom: 2px dotted #FA8072;
 		margin-left: -28px;
+		color: red;
 	}
 
 	.black{
 		width: 1180px;
 		border-bottom: 2px dotted #999;
 		margin-left: -30px;
-		// margin-left: 4px;
 	}
 	
 	.pointer{
@@ -58,11 +58,6 @@
 
 	.blue{
 		color: @blue;
-	}
-
-	.red{
-		.pointer;
-		color: red;
 	}
 
 	.green{
@@ -1051,7 +1046,7 @@
 	}
 
 	.view-filters{
-		top: +5px;
+		top: 5px;
 		position: absolute;
 		padding: 5px 15px;
 		// box-shadow: 0px 0px 4px #ccc;
