--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1826,6 +1826,41 @@
 		}
 	}
 
+	.form-page{
+		height: 300px;
+		width: 600px;
+		margin: 0 auto;
+		margin-top: 100px;
+		background-color: #fff;
+		box-shadow: 0px 0px 7px #999;
+		padding-top: 10px;
+		// padding-left: 40px;
+		// padding-right: 40px;
+		
+		h1{
+			color: #777;
+			margin-bottom: 20px;
+
+		}
+
+		.checkbox{
+			color: #bbb;
+		}
+	}
+
+	.login-form{
+		width: 300px;
+		// outline: 1px solid #ccc;
+		margin: 0 auto;
+
+
+		
+	}
+
+	.full-width{
+		width: 100%;
+	}
+
 
 	
 
