--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -107,7 +107,7 @@
   }
   .header-menu {
     float: left;
-    width: 600px;
+    width: 850px;
     height: 100%;
     padding-top: 22px;
   }
@@ -331,32 +331,49 @@
     text-decoration: underline !important;
   }
   .library-block {
+    text-align: left;
     width: 720px;
-    height: 80px;
     display: none;
     position: absolute;
     background-color: #f5f5f5;
     box-shadow: 0px 6px 6px #C9C9C9;
-    top: 38px;
+    top: 35px;
     left: -320px;
     padding: 10px;
   }
-  .library-block ul li {
+  ul.nav-tabs li a {
+    font-weight: normal !important;
+    border-bottom: none;
+  }
+  ul.nav-tabs li.active a {
+    background-color: #f5f5f5 !important;
+    color: #FFA500 !important;
+    font-weight: bold !important;
+  }
+  ul.nav-tabs li.active a a:hover {
+    background-color: #fAfAfA !important;
+  }
+  ul.nav-tabs li.active a a:focus {
+    background-color: #f5f5f5 !important;
+  }
+  .tab-content ul {
+    margin-top: 10px;
+  }
+  .tab-content ul li {
     display: inline-block;
     width: 160px;
-    height: 20px;
   }
-  .library-block a.library-subcategory {
+  .tab-content ul li a.library-subcategory {
     border-bottom: 0px !important;
     text-decoration: none !important;
     display: inline;
     margin-right: 50px;
     line-height: 25px;
-    color: #1d44b8;
+    color: #214cce;
     font-weight: normal !important;
     font-size: 16px;
   }
-  .library-block a.library-subcategory:hover {
+  .tab-content ul li a.library-subcategory:hover {
     text-decoration: underline !important;
   }
   .footer-menu {
@@ -383,10 +400,11 @@
     border-bottom: none;
   }
   .search {
+    height: 25px;
     z-index: 2;
     position: absolute;
-    right: 15px;
-    top: 25px;
+    right: 13px;
+    top: 65px;
     width: 300px;
     background-color: #fff;
   }
@@ -450,9 +468,7 @@
     background-color: #fff;
   }
   .fixed-menu .search {
-    background-color: #fff;
-    right: 15px;
-    top: 8px;
+    display: none;
   }
   .content {
     float: left;
@@ -461,7 +477,7 @@
   }
   .sidebar {
     padding: 15px;
-    padding-top: 20px;
+    padding-top: 30px;
     float: left;
     width: 330px;
     border-left: 2px dotted #ccc;
@@ -824,7 +840,7 @@
   }
   .sidebar-menu ul.sidebar-menu-category li.active span {
     color: #FFA500;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
   }
   .sidebar-menu ul.sidebar-menu-clas {
