thamb in cgridview library book

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -521,6 +521,15 @@
 				&:hover{
 					border-bottom: none;
 				}
+
+				&.active{
+					font-weight: bold;
+					color: @yellow;
+
+					text-decoration: none;
+					border-bottom: none;
+					font-size: 12px;
+				}
 			}
 		}
 	}
