--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -399,6 +399,13 @@
   .footer-menu ul li a:hover {
     border-bottom: none;
   }
+  .footer-menu ul li a.active {
+    font-weight: bold;
+    color: #FFA500;
+    text-decoration: none;
+    border-bottom: none;
+    font-size: 12px;
+  }
   .search {
     height: 25px;
     z-index: 2;
