--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -1034,6 +1034,7 @@
     margin-left: 5px;
     font-size: 16px;
     color: #4169E1;
+    height: 40px;
   }
   .sorter {
     padding-bottom: 10px;
