--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1548,12 +1548,15 @@
 	.middle-article-block{
 		padding-bottom: 25px;
 
-		.knowall-link a{
-			margin-left: 5px;
-			font-size: 16px;
-			color: @blue;
+		.knowall-link{
 			height: 40px;
-		}
+
+			a{
+				margin-left: 5px;
+				font-size: 16px;
+				color: @blue;
+			}
+		} 
 	}
 
 	// img.thumbnail{
