--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -1030,11 +1030,13 @@
   .middle-article-block {
     padding-bottom: 25px;
   }
+  .middle-article-block .knowall-link {
+    height: 40px;
+  }
   .middle-article-block .knowall-link a {
     margin-left: 5px;
     font-size: 16px;
     color: #4169E1;
-    height: 40px;
   }
   .sorter {
     padding-bottom: 10px;
