--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -339,11 +339,11 @@
 				td{
 					a{
 						display: block;
-						padding-top: 5px;
-						padding-bottom: 5px;
-						color: darken(@blue, 15%);
+						padding-top: 2px;
+						padding-bottom: 2px;
+						color: darken(@blue, 10%);
 						font-weight: normal !important;
-						font-size: 16px;
+						font-size: 12px;
 
 						&:hover{
 							text-decoration: none !important;
@@ -760,6 +760,10 @@
 		// min-height: 600px;
 		// border-right: 2px dotted #ccc;
 		// outline: 1px dashed yellow;
+		
+		p{
+			text-align: justify;
+		}
 	}
 
 	.sidebar{
@@ -856,6 +860,7 @@
 			font-family: Arial;
 			color: #333;
 			text-indent: 20px;
+			text-align: justify;
 
 			a{
 			border-bottom: 1px solid @yellow;
@@ -1804,6 +1809,9 @@
 	}
 
 	.knowall-article{
+		p{
+			text-align: justify;
+		}
 		// margin-left: 15px;
 		// margin-right: 15px;
 	}
