последние поступления книг и творов

--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -130,6 +130,10 @@
 		float: left;
 	}
 
+	.sketch{
+		font-family: 'Cabin Sketch', cursive, Arial, Verdana;
+	}
+
 	.logo-title{
 		height: 50%;
 		// background-color: @blue;
@@ -1752,6 +1756,8 @@
 			img{
 				float: left;
 				margin-right: 15px;
+				width: 150px;
+				height: 106px;
 			}
 
 
