--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -98,6 +98,10 @@
 		// border-bottom: 2px dotted #ccc;
 	}
 
+	.shkolyar{
+		font-family: 'Cabin Sketch', cursive, Arial, Verdana;
+	}
+
 
 
 	.logo{
@@ -1120,8 +1124,8 @@
 	}
 
 	.view-filters{
-		top: 5px;
-		position: absolute;
+		// top: 5px;
+		// position: absolute;
 		padding: 5px 15px;
 		// box-shadow: 0px 0px 4px #ccc;
 
