--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1964,6 +1964,16 @@
 		width: 100%;
 	}
 
+	.vk-like-widget{
+		float: right;
+		width: 250px;
+	}
+
+	.fb-like-widget{
+		float: left;
+		width: 250px;
+	}
+
 
 	
 
