--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -1324,6 +1324,7 @@
   .fb-like-widget {
     float: left;
     width: 250px;
+    margin-top: 30px;
   }
   .main-menu {
     margin-bottom: 15px;
