--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -775,7 +775,7 @@
 	}
 
 	.sidebar{
-		padding: 15px;
+		padding: 0px;
 		padding-top: 30px;
 		float: left;
 		width: 330px;
@@ -786,7 +786,9 @@
 		// border-right: 2px dotted #ccc;
 	}
 
+
 	.sidebar-block{
+		padding: 15px;
 		margin-bottom: 15px;
 		// border-bottom: 2px dotted #ccc;
 
@@ -800,6 +802,16 @@
 			font-weight: bold;
 		}
 
+		.info{
+			margin-top: 0px;
+		}
+
+	}
+
+	.ref{
+		padding-left: 0px;
+		padding-right: 0px;
+		text-align: center;
 	}
 
 	.clear{
