--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1507,9 +1507,9 @@ img.img-middle-book{
 	font-size: 16px;
 }
 
-#fb-modal iframe{
-	height: 80px !important;
-}
+// #fb-modal iframe{
+// 	height: 80px !important;
+// }
 
 .last-book{
 	// padding-left: 10px;
@@ -1978,7 +1978,7 @@ img.img-middle-book{
 
 .vk-like-widget{
 	float: right;
-	width: 250px;
+	width: 300px;
 	margin-top: 30px;
 }
 
@@ -1989,6 +1989,13 @@ img.img-middle-book{
 
 .social{
   min-height: 320px
+}
+
+.social-shared{
+  position: fixed;
+  z-index: 10;
+  left: 0px;
+  top: 25px;
 }
 
 
@@ -2149,6 +2156,11 @@ a > .small-book > .img-small-book{
 		width: 50px;
 		height: 75px;
 	}
+}
+
+#vk_like{
+	float: left;
+	margin-right: 30px;
 }
 
 
