--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -1415,7 +1415,20 @@ a > .small-book > .img-small-book {
   left: 0px;
   top: 25px;
 }
-#vk_like{
+.vk-like{
+  width: 100px;
   float: left;
-  margin-right: 30px;
+  margin-right: 5px;
+}
+
+.vk-subscribe{
+  width: 350px;
+  float: left;
+  margin-right: 5px;
+}
+
+.fb-like{
+  width: 100px !important;
+  float: right;
+  padding-right: 20px;
 }
