--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -2158,9 +2158,22 @@ a > .small-book > .img-small-book{
 	}
 }
 
-#vk_like{
-	float: left;
-	margin-right: 30px;
+.vk-like{
+  width: 100px;
+  float: left;
+  margin-right: 5px;
+}
+
+.vk-subscribe{
+  width: 350px;
+  float: left;
+  margin-right: 5px;
+}
+
+.fb-like{
+  width: 100px !important;
+  float: right;
+  padding-right: 20px;
 }
 
 
