--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -1976,15 +1976,15 @@ img.img-middle-book{
 	width: 100%;
 }
 
-.vk-like-widget{
-	float: right;
-	width: 300px;
-	margin-top: 30px;
+.vk-like-widget {
+  float: right;
+  width: 300px;
+  margin-right: 10px;
 }
-
-.fb-like-widget{
-	float: left;
-	width: 250px;
+.fb-like-widget {
+  float: left;
+  width: 300px;
+  margin-left: 10px;
 }
 
 .social{
@@ -2175,7 +2175,9 @@ a > .small-book > .img-small-book{
   float: right;
   padding-right: 20px;
 }
-
+.modal-dialog{
+  width: 650px;
+}
 
 
 
