--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -98,6 +98,10 @@ body{
 	// border-bottom: 2px dotted #ccc;
 }
 
+.header-wrap {
+  height: 75px;
+}
+
 .shkolyar{
 	font-family: 'Cabin Sketch', cursive, Arial, Verdana;
 }
