--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -435,14 +435,14 @@ body{
 .library-block{
 
 	text-align: left;
-	width: 720px;
+	width: 820px;
 	// height: 80px;
 	display: none;
 	position: absolute;
 	background-color: #f5f5f5;
 	box-shadow: 0px 6px 6px #C9C9C9;
 	top: 35px;
-	left: -320px;
+	left: -420px;
 	padding: 10px;
 
 	
@@ -481,7 +481,7 @@ ul.nav-tabs{
 		li{
 			
 			display: inline-block;
-			width: 160px;
+			width: 180px;
 
 
 
@@ -489,7 +489,7 @@ ul.nav-tabs{
 				border-bottom: 0px !important;
 				text-decoration: none !important;
 				display: inline;
-				margin-right: 50px;
+				// margin-right: 50px;
 				line-height: 25px;
 				color: darken(@blue, 10%);
 				font-weight: normal !important;
