--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -988,6 +988,22 @@ p.description{
 	}
 }
 
+.library-author-list{
+
+	.library-author{
+
+		text-align: left;
+		padding: 10px;
+		width: 25%;
+		height: 35px;
+		float: left;
+
+		h3{
+			font-size: 16px;
+		}
+	}
+}
+
 .book-list{
 	position: relative;
 	width: 100%;
