--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -976,7 +976,7 @@ p.description{
 
 		font-size: 25px;
 		text-align: center;
-		padding: 10px;
+		// padding: 10px;
 		font-weight: bold;
 		width: 20%;
 		height: 100px;
