--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -643,7 +643,7 @@ p.description a:hover {
 }
 .library-author-list .library-author {
   text-align: left;
-  padding: 10px;
+  /*padding: 10px;*/
   width: 25%;
   height: 35px;
   float: left;
