--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -2000,7 +2000,12 @@ img.img-middle-book{
   float: right;
   width: 300px;
   margin-right: 10px;
+
+  iframe{
+  	height: 320px !important;
+  }
 }
+
 .fb-like-widget {
   float: left;
   width: 300px;
