--- a/themes/market/css/app.css
+++ b/themes/market/css/app.css
@@ -1442,7 +1442,10 @@ a > .small-book > .img-small-book {
   padding-right: 20px;
 }
 .modal-dialog {
-  width: 650px;
+  width: 350px;
+}
+.modal-content {
+  height: 400px;
 }
 .like-btn {
   margin-top: 10px;
