--- a/themes/market/less/app.less
+++ b/themes/market/less/app.less
@@ -2200,8 +2200,12 @@ a > .small-book > .img-small-book{
   float: right;
   padding-right: 20px;
 }
-.modal-dialog{
-  width: 650px;
+.modal-dialog {
+  width: 350px;
+}
+
+.modal-content {
+  height: 400px;
 }
 
 .like-btn{
